Revision history for Perl extension PGXN::API

0.8.1

0.8.0   2011-04-02T20:32:02
      - Documentation and README documents now have their white space
        normalized to single spaces before indexing. This allows highlighting
        to work better in result sets. Suggested by Marvin Humphrey.
      - The PGXN::API::Searcher object used by the router is now maintained
        across requests, rather than created a new for every call to the
        /search API. This is because PGXN::API::Searcher v0.7.1 properly
        reconnects in the event of a changed index, so we don't have to worry
        about it here.
      - Fixed the `uri` and `email` fields in the user search index so that
        they are both stored *and* indexed. They were previously just indexed,
        and so might be missing from search results.

0.7.0   2011-03-31T20:55:51
      - Added "search" URI template to the API server's `/index.json`.
      - Added full documentation.
      - The indexer now respects the `no_index` key in the meta file.
        Specifically, it will ignore any documentation files that match the
        no_index spec. They won't be indexed.
      - Changed the default `mirror_root` subdirectory from "pgxn" to
        "mirror".
      - Added query parameter validation to the `/search` API. Any invalid
        parameters now return 400.
      - Restored required index specification to the search API path, rather
        than a query parameter. So `/search` is now a 404. Use `/search/docs`
        instead. Can also use `/search/dists`, `/search/extensions`,
        `/search/users`, and `/search/tags`.
      - To be in sync with the above, the search indexes now have plural names
        rather than singular.
      - Fixed "Cannot copy directory" errors in tests when run from a
        distribution.

0.6.9   2011-03-29T04:43:53
      - Fixed option processing in `pgxn_api.psgi` so that it deals only with