@@ -30,7 +30,6 @@ can_ok $CLASS => qw(
     unzip
 );
 
-# Set up for Win32.
 my $pgxn   = PGXN::API->instance;
 $pgxn->doc_root(catdir 't', 'test_doc_root');
 END { remove_tree $pgxn->doc_root }
